# Learn_OpenGL

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  game
App/: CMakeLists.txt
App/src/: main.cpp
Core/: CMakeLists.txt
Core/Source/Core/: Application.hpp  Window.hpp
Engine/: CMakeLists.txt
Engine/dependencies/stb_image/: stb_image.cpp
Engine/src/: enginepch.h
Engine/src/Engine/Core/: Assert.h  Base.h  Log.h  PlatformDetection.h
Engine/src/Engine/Debug/: Instrumentor.h
Engine/src/Engine/Renderer/: Buffer.cpp  Buffer.h  GraphicsContext.cpp  GraphicsContext.h  VertexArray.cpp  VertexArray.h
_old/: Material.cpp  Material.hpp  Shader.hpp  Triangle_mesh.cpp  Triangle_mesh.hpp  config.h
dependencies/glad/: glad.h
includes/: events.hpp  game.hpp  includes.hpp  init.hpp  prototypes.hpp  settings.hpp  typedef.hpp
includes/classes/: Camera.hpp  EBO.hpp  Shader.hpp  Texture.hpp  VAO.hpp  VBO.hpp
includes/core/: Engine.hpp  Engine.hpp.d  GL.hpp
includes/game/: Prototypes.hpp  Settings.hpp  Types.hpp
old/: linear_algebros.cpp  linear_algebros.h
shaders/: shader.frag  shader.vert
src/: Material.cpp  Material.hpp  Shader.cpp  Shader.hpp  config.h  events.cpp  glad.c  helloRectangle.cpp  helloTraingle.cpp  helloTriangle.cpp  init.cpp  linear_algebros.cpp  linear_algebros.h  main.cpp  render.cpp
src/classes/: Camera.cpp  EBO.cpp  Shader.cpp  Texture.cpp  VAO.cpp  VBO.cpp
src/shaders/: shader.frag  shader.vert  shaderTest.frag
temp/: events.cpp  main.cpp
temp/classesCpp/: Camera.cpp  EBO.cpp  Shader.cpp  Texture.cpp  VBO.cpp
temp/classesHpp/: EBO.hpp  Texture.hpp  VAO.hpp
temp/test/: matrixMatch.cpp
test/: randomCubePositions.cpp
